--- a/ST558_Project1.qmd
+++ b/ST558_Project1.qmd
@@ -393,7 +393,7 @@ MultiYear_API_Builder <- function(years, numvars = "AGEP", catvars = "SEX", geo_
   #____________________________________________________________________________________
   #wrangle data
   
-  # numerical data (I tried to do a fancier loop but couldn't make it worK)
+  # numerical data
   for (i in seq_along(final)) {
     if (colnames(final)[i] == "PWGTP") {
     final$PWGTP <- as.integer(final$PWGTP)
@@ -407,12 +407,12 @@ MultiYear_API_Builder <- function(years, numvars = "AGEP", catvars = "SEX", geo_
     if (colnames(final)[i] == "GRPIP") {
       final$GRPIP <- as.integer(final$GRPIP)
     }
-    if (colnames(final)[i] == "JWMP") { #this one is number of minutes
-      final$JWMP <- as.integer(final$JWMP)
+    if (colnames(final)[i] == "JWMNP") { #this one is number of minutes
+      final$JWMNP <- as.integer(final$JWMNP)
     }
   }
   
-  # categorical data: HISPEED, JWTRNS, SCH, SCHL, and SEX 
+  # categorical data:
   for (i in seq_along(final)) {
     if (colnames(final)[i] == "FER") {
     final$FER <- as.factor(final$FER)
@@ -433,7 +433,7 @@ MultiYear_API_Builder <- function(years, numvars = "AGEP", catvars = "SEX", geo_
       final$SCHL <- as.factor(final$SCHL)
     }
     if (colnames(final)[i] == "SEX") {
-      final$SEX <- as.integer(final$SEX)
+      final$SEX <- as.factor(final$SEX)
     }
   }
   
@@ -527,110 +527,6 @@ Data <- left_join(Data, FER_lookup, by = c("FER" = "code")) %>%
 ```
 
 
-#Summary function with means and sds of numvars and counts of catvars
-
-#For the census summary method, let’s write a function that produces means and standard deviations for
-#our numeric variable(s) and counts for our categorical variable(s).
-#• This function should take three arguments: the tibble with class census, the numeric variable(s) to
-#summarize, the categorical variable(s) to summarize.
-#• By default, it should summarize all numeric variables (other than PWGTP) and all categorical variables
-#in the tibble. However, the user should be able to specify the variables they’d like to summarize if
-#they’d like.
-#– To find a sample mean for a numeric variable, we would do something like this:
-#sum(numeric_vector*weight_vector)/sum(weight_vector)
-#– To find a sample standard deviation:
-#sqrt(sum(numeric_vectorˆ2*weight_vector)/sum(weight_vector)-sample_meanˆ2)
-#– Return the values as a named list
-#Test out this function by running summary(_your_census_tibble_) on something you’ve returned from
-#your census API function.
-
-```{r}
-#copy and paste filtering from plotting function once it's debugged
-
-#summary.census <- function(API_tibble, 
-#                           numvars = c("AGEP","GASP","GRPIP","JWAP","JWDP","JWMNP"),      #catvars = c("FER", "HHL", "HISPEED", "JWTRNS", "SCH", "SCHL", "SEX")) {
-#  loop through columns in tibble
-#  calculate column summaries based on column type
-#  add to list
-##}
-##output list
-```
-
-#Plot function for census class tibble
-#```{r}
-#plot.census <- function(census_tibble, numvar, catvar) {
-  
-  #check tibble 
-#  if (class(census_tibble)[1] != "census" | is_tibble(census_tibble) != TRUE) {
-#     stop("Please enter a valid census-class tibble")
-#     return(NA)
-#  }
-  
-  #check numvar
-#  numvar_options <- c("AGEP", "GASP", "GRPIP", "JWAP", "JWDP", "JWMNP")
-#  if(numvar %in% numvar_options != TRUE) {
-#    stop("Please enter one valid numeric variable")
-#  }
-  
-  #check catvar
-#  catvar_options <- c("FER", "HHL", "HISPEED", "JWTRNS", "SCH", "SCHL", "SEX")
-#  if(catvar %in% catvar_options != TRUE) {
-#    stop("Please enter one valid categorical variable")
-#  }
-    
-#tibble <- as_tibble(census_tibble) #ggplot doesn't seem to like census class
-
-# filter numvars
-#if (numvar == "AGEP") filter(tibble, AGEP >= 1 & AGEP <= 99)
-#if (numvar == "GASP") filter(tibble, GASP >= 4 & GASP <= 9999)
-#if(numvar == "GRPIP") filter(tibble, GRPIP >= 1 & GRPIP <= 100)
-#if(numvar =="JWMNP") filter(tibble, JWMNP >= 1 & JWMNP <= 200)
-# need JWP filter for code = 0
-# need JWDP filter for code = 0
-
-#filter catvars
-#if (catvar == "FER") filter(tibble, as.integer(FER) %in% c(1,2))
-#if (catvar == "HHL") filter(tibble, HHL %in% c(1,2,3,4,5))
-#if (catvar == "HISPEED") filter(tibble,HISPEED %in% c(1,2))
-#if (catvar == "JWTRNS") filter(tibble,JWTRNS %in% 1:12)
-#if (catvar == "SCH") filter(tibble, SCH %in% c(1,2,3))
-#if (catvar == "SCHL") filter(tibble, SCHL %in% 1:24)
-#if (catvar == "SEX") filter(tibble, SEX %in% c(1,2))
-
-
-
-#  ggplot(tibble,
-         aes(x = get(catvar), y = get(numvar), weight = PWGTP)) +
-#  geom_boxplot()
-  
-  
-#}
-```
-
-#Try out plot function for census class tibble
-
-
-```{r}
-#data_for_plot <- MultiYear_API_Builder(years = c(2015,2016), numvars = c("AGEP","GASP","GRPIP"), catvars = c("FER", "HHL"), geo_level = c("region"), geo_subset = c("2"))
-
-
-#plot.census(data_to_plot, "AGEP", "FER")
-```
-
-
-
-## Investigation using function
-=======
-
-
-```
-
->>
-
-```{r}
-
-
-```
 
 
 ### Metadata and Formatting
@@ -825,6 +721,54 @@ MultiYear_API_Builder <- function(years,
   }
 
   final <- dplyr::bind_rows(result_list)
+  class(final) <- c("census", class(final)) #make the tibble census-class
+  
+  #wrangle data
+  
+  # numerical data
+  for (i in seq_along(final)) {
+    if (colnames(final)[i] == "PWGTP") {
+    final$PWGTP <- as.integer(final$PWGTP)
+    }
+    if (colnames(final)[i] == "AGEP") {
+      final$AGEP <- as.integer(final$AGEP)
+    }
+    if (colnames(final)[i] == "GASP") {
+      final$GASP <- as.integer(final$GASP)
+    }
+    if (colnames(final)[i] == "GRPIP") {
+      final$GRPIP <- as.integer(final$GRPIP)
+    }
+    if (colnames(final)[i] == "JWMNP") { #this one is number of minutes
+      final$JWMNP <- as.integer(final$JWMNP)
+    }
+  }
+  
+  # categorical data:
+  for (i in seq_along(final)) {
+    if (colnames(final)[i] == "FER") {
+    final$FER <- as.factor(final$FER)
+    }
+    if (colnames(final)[i] == "HHL") {
+      final$HHL <- as.factor(final$HHL)
+    }
+    if (colnames(final)[i] == "HISPEED") {
+      final$HISPEED <- as.factor(final$HISPEED)
+    }
+    if (colnames(final)[i] == "JWTRNS") {
+      final$JWTRNS <- as.factor(final$JWTRNS)
+    }
+    if (colnames(final)[i] == "SCH") {
+      final$SCH <- as.factor(final$SCH)
+    }
+    if (colnames(final)[i] == "SCHL") {
+      final$SCHL <- as.factor(final$SCHL)
+    }
+    if (colnames(final)[i] == "SEX") {
+      final$SEX <- as.factor(final$SEX)
+    }
+  }
+  
   return(final)
 }
 
@@ -842,16 +786,121 @@ out2 <- MultiYear_API_Builder(
 )
 #"JWAP","JWDP"
 
-#view(out2)
+view(out2)
 
 
 #metatest <- get_pums_metadata(2022)
 #head(build_value_lookup(metatest, "JWAP"))
 #head(build_value_lookup(metatest, "JWDP"))
 ```
+
 ## Investigation using function
 ```{r}
 
 ```
+
+
+## Summary Function for Census Tibbles
+(means and sds of numvars and counts of catvars)
+
+#For the census summary method, let’s write a function that produces means and standard deviations for
+#our numeric variable(s) and counts for our categorical variable(s).
+#• This function should take three arguments: the tibble with class census, the numeric variable(s) to
+#summarize, the categorical variable(s) to summarize.
+#• By default, it should summarize all numeric variables (other than PWGTP) and all categorical variables
+#in the tibble. However, the user should be able to specify the variables they’d like to summarize if
+#they’d like.
+#– To find a sample mean for a numeric variable, we would do something like this:
+#sum(numeric_vector*weight_vector)/sum(weight_vector)
+#– To find a sample standard deviation:
+#sqrt(sum(numeric_vectorˆ2*weight_vector)/sum(weight_vector)-sample_meanˆ2)
+#– Return the values as a named list
+#Test out this function by running summary(_your_census_tibble_) on something you’ve returned from
+#your census API function.
+
+```{r}
+
+summary.census <- function(, 
+#                           numvars = c("AGEP","GASP","GRPIP","JWAP","JWDP","JWMNP"),      #catvars = c("FER", "HHL", "HISPEED", "JWTRNS", "SCH", "SCHL", "SEX")) {
+#  loop through columns in tibble
+#  calculate column summaries based on column type
+#  add to list
+##}
+##output list
+```
+
+
+
+
+##Plot Function for Census Class Tibble
+```{r}
+library(tidyverse)
+
+plot.census <- function(census_tibble, numvar, catvar) {
+  
+#  check tibble 
+  if (class(census_tibble)[1] != "census" | is_tibble(census_tibble) != TRUE) {
+     stop("Please enter a valid census-class tibble")
+     return(NA)
+  }
+  
+#  check numvar
+  numvar_options <- c("AGEP", "GASP", "GRPIP", "JWAP", "JWDP", "JWMNP")
+  if(numvar %in% numvar_options != TRUE) {
+    stop("Please enter one valid numeric variable")
+  }
+  
+#  check catvar
+  catvar_options <- c("FER", "HHL", "HISPEED", "JWTRNS", "SCH", "SCHL", "SEX")
+  if(catvar %in% catvar_options != TRUE) {
+    stop("Please enter one valid categorical variable")
+  }
+    
+#tbl <- as_tibble(census_tibble) #filter doesn't seem to like census class
+
+#  get(numvar)
+#  get(catvar)
+  
+# filter numvars
+#AGEP_filtered <- if (numvar == "AGEP") filter(tbl, AGEP >= 1 & AGEP <= 99)
+#if (numvar == "GASP") filter(tibble, GASP >= 4 & GASP <= 9999)
+#if(numvar == "GRPIP") filter(tibble, GRPIP >= 1 & GRPIP <= 100)
+#if(numvar =="JWMNP") filter(tibble, JWMNP >= 1 & JWMNP <= 200)
+# need JWP filter for code = 0
+# need JWDP filter for code = 0
+
+#filter catvars
+#FER_filtered <- if (catvar == "FER") filter(census_tibble, as.integer(FER) %in% c(2,3))
+#if (catvar == "HHL") filter(tibble, HHL %in% c(1,2,3,4,5))
+#if (catvar == "HISPEED") filter(tibble,HISPEED %in% c(1,2))
+#if (catvar == "JWTRNS") filter(tibble,JWTRNS %in% 1:12)
+#if (catvar == "SCH") filter(tibble, SCH %in% c(1,2,3))
+#if (catvar == "SCHL") filter(tibble, SCHL %in% 1:24)
+#if (catvar == "SEX") filter(tibble, SEX %in% c(1,2))
+
+
+
+  ggplot(census_tibble,
+         aes(x = get(catvar), y = get(numvar), weight = PWGTP)) +
+  geom_boxplot()
+  
+  
+}
+```
+
+## Run Plot Function
+```{r}
+data_to_plot <- MultiYear_API_Builder(
+  years   = c(2022),
+  numvars = c("AGEP","GASP","GRPIP","JWMNP"),
+  catvars = c("JWAP", "JWDP","FER","HHL","HISPEED","JWTRNS","SCH","SCHL","SEX"),
+  geo_level = "state",
+  geo_subset = "08"
+)
+
+plot.census(out2, "GASP", "HHL")
+
+```
+
 
 ## Summary
