--- a/ST558_Project1.qmd
+++ b/ST558_Project1.qmd
@@ -534,6 +534,8 @@ library(httr)
 library(jsonlite)
 library(dplyr)
 library(tibble)
+library(stringr)
+library(lubridate)
 
 
 #METADATA
@@ -765,6 +767,47 @@ MultiYear_API_Builder <- function(years,
       final$SEX <- as.factor(final$SEX)
     }
   }
+  #________________________________________________
+  
+  # time formatting
+  final <- final |>
+  mutate(
+    #JWAP
+    # start/end strings before and after 'to'
+    JWAPstart_str = sub("\\s+to.*$", "", JWAP_label),
+    JWAPend_str   = sub(".*to\\s+",   "", JWAP_label),
+    # turn a.m./p.m. into AM/PM 
+    JWAPstart_str = str_replace_all(JWAPstart_str, c("a\\.m\\." = "AM", "p\\.m\\." = "PM")),
+    JWAPend_str   = str_replace_all(JWAPend_str,   c("a\\.m\\." = "AM", "p\\.m\\." = "PM")),
+    # parse to times
+    JWAPstart_time = parse_date_time(JWAPstart_str, orders = "I:M p", quiet = TRUE),
+    JWAPend_time   = parse_date_time(JWAPend_str,   orders = "I:M p", quiet = TRUE),
+    # midpoint = start + half the interval
+    JWAP_midtime   = JWAPstart_time + (JWAPend_time - JWAPstart_time)/2,
+    # formatting
+    JWAP_mid_label  = if_else(is.na(JWAP_midtime), NA_character_,
+                             format(JWAP_midtime, "%I:%M %p")), 
+
+    #JWDP
+    # start/end strings before and after 'to'
+    JWDPstart_str = sub("\\s+to.*$", "", JWDP_label),
+    JWDPend_str   = sub(".*to\\s+",   "", JWDP_label),
+    # turn a.m./p.m. into AM/PM 
+    JWDPstart_str = str_replace_all(JWDPstart_str, c("a\\.m\\." = "AM", "p\\.m\\." = "PM")),
+    JWDPend_str   = str_replace_all(JWDPend_str,   c("a\\.m\\." = "AM", "p\\.m\\." = "PM")),
+    # parse to times
+    JWDPstart_time = parse_date_time(JWDPstart_str, orders = "I:M p", quiet = TRUE),
+    JWDPend_time   = parse_date_time(JWDPend_str,   orders = "I:M p", quiet = TRUE),
+    # midpoint = start + half the interval
+    JWDP_midtime   = JWDPstart_time + (JWDPend_time - JWDPstart_time)/2,
+    # formatting
+    JWDP_mid_label  = if_else(is.na(JWDP_midtime), NA_character_,
+                             format(JWDP_midtime, "%I:%M %p"))) |>
+  # delete unneeded cols    
+  select(-JWAPstart_time, -JWAPend_time,-JWAPstart_str, -JWAPend_str, -JWAP_midtime, -JWDPstart_time, -JWDPend_time,-JWDPstart_str, -JWDPend_str, -JWDP_midtime, -JWAP_label, -JWDP_label)
+  
+  
+#________________________________________________
   
   return(final)
 }
@@ -892,8 +935,348 @@ plot.census(out2, "GASP", "HHL")
 
 
 ```{r}
-#Starting work on converting times to middle times
+# Convert times to mid-point times
 
+view(out2)
+timevars <- out2 |>
+  select(JWAP, JWAP_label, JWDP, JWDP_label)
+
+#stringr::str_split("9:40 p.m. to 9:44 p.m.", " to ")
+
+library(dplyr)
+library(stringr)
+library(lubridate)
+
+
+midtime <- out2 |>
+  mutate(
+    #JWAP
+    # start/end strings before and after 'to'
+    JWAPstart_str = sub("\\s+to.*$", "", JWAP_label),
+    JWAPend_str   = sub(".*to\\s+",   "", JWAP_label),
+    # turn a.m./p.m. into AM/PM 
+    JWAPstart_str = str_replace_all(JWAPstart_str, c("a\\.m\\." = "AM", "p\\.m\\." = "PM")),
+    JWAPend_str   = str_replace_all(JWAPend_str,   c("a\\.m\\." = "AM", "p\\.m\\." = "PM")),
+    # parse to times
+    JWAPstart_time = parse_date_time(JWAPstart_str, orders = "I:M p", quiet = TRUE),
+    JWAPend_time   = parse_date_time(JWAPend_str,   orders = "I:M p", quiet = TRUE),
+    # midpoint = start + half the interval
+    JWAP_midtime   = JWAPstart_time + (JWAPend_time - JWAPstart_time)/2,
+    # formatting
+    JWAP_mid_label  = if_else(is.na(JWAP_midtime), NA_character_,
+                             format(JWAP_midtime, "%I:%M %p")), 
+
+    #JWDP
+    # start/end strings before and after 'to'
+    JWDPstart_str = sub("\\s+to.*$", "", JWDP_label),
+    JWDPend_str   = sub(".*to\\s+",   "", JWDP_label),
+    # turn a.m./p.m. into AM/PM 
+    JWDPstart_str = str_replace_all(JWDPstart_str, c("a\\.m\\." = "AM", "p\\.m\\." = "PM")),
+    JWDPend_str   = str_replace_all(JWDPend_str,   c("a\\.m\\." = "AM", "p\\.m\\." = "PM")),
+    # parse to times
+    JWDPstart_time = parse_date_time(JWDPstart_str, orders = "I:M p", quiet = TRUE),
+    JWDPend_time   = parse_date_time(JWDPend_str,   orders = "I:M p", quiet = TRUE),
+    # midpoint = start + half the interval
+    JWDP_midtime   = JWDPstart_time + (JWDPend_time - JWDPstart_time)/2,
+    # formatting
+    JWDP_mid_label  = if_else(is.na(JWDP_midtime), NA_character_,
+                             format(JWDP_midtime, "%I:%M %p"))) |>
+  # delete unneeded cols    
+  select(-JWAPstart_time, -JWAPend_time,-JWAPstart_str, -JWAPend_str, -JWAP_midtime, -JWDPstart_time, -JWDPend_time,-JWDPstart_str, -JWDPend_str, -JWDP_midtime, -JWAP_label, -JWDP_label)
+    
+  
+view(midtime)
+    
+    
+```
+
+```{r}
+# duplicate - can delete this later
+#add time conversion into main code block
+
+library(httr)
+library(jsonlite)
+library(dplyr)
+library(tibble)
+library(stringr)
+library(lubridate)
+
+
+#METADATA
+# -------------------------------
+# helper function for PUMS metadata - builds variables.json URL from user inputs
+get_pums_metadata <- function(year = 2022) {
+  metadata_url <- paste0("https://api.census.gov/data/", year, "/acs/acs1/pums/variables.json")
+  metadata_json_url <- httr::GET(metadata_url)
+  fromJSON(rawToChar(metadata_json_url$content))
+}
+# test and check json data
+# metadata <-get_pums_metadata(2018)
+# names(metadata)
+
+
+# -------------------------------
+# function to get variable ids for joining metadata to data
+# input is json metadata and the variable
+build_value_lookup <- function(metadata, var) {
+  v <- metadata$variables[[var]]
+  
+  # skip if not coded values for numeric vars like AGEP
+  if (is.null(v) || is.null(v$values) || is.null(v$values$item)) return(NULL)
+  
+  # make tibble with json metadata column names
+  lookup <- tibble(
+    code  = names(v$values$item),
+    label = unlist(v$values$item, use.names = FALSE)
+  )
+  
+  # rename new columns - can we pull from JSON to name column?
+  names(lookup) <- c(var, paste0(var, "_label"))
+  lookup
+}
+
+# -------------------------------
+# function to add labels to categorical variables in df
+
+label_categoricals <- function(df, metadata, catvars) {
+  if (missing(catvars) || is.null(catvars) || length(catvars) == 0) return(df)
+
+  # only keep categorical vars that are actually in df
+  vars <- intersect(catvars, names(df))
+  if (length(vars) == 0) return(df)
+
+  out <- df
+
+  for (var in vars) {
+    # build lookup for this var
+    lk <- build_value_lookup(metadata, var)  # <- note: _simple
+    if (is.null(lk)) next
+
+    # ensure key types match
+    out[[var]] <- as.character(out[[var]])
+    lk[[var]]  <- as.character(lk[[var]])
+
+    # NEW debugging
+    #________________
+    #: pad time codes to 3 chars if needed
+  if (var %in% c("JWAP","JWDP")) {
+    out[[var]] <- stringr::str_pad(out[[var]], 3, pad = "0")
+    lk[[var]]  <- stringr::str_pad(lk[[var]], 3, pad = "0")
+  }
+    
+    #________________________
+    
+    # add VAR_label column
+    out <- dplyr::left_join(out, lk, by = var)
+  }
+
+  out
+}
+
+#____________________________
+# single-year API URL builder
+
+API_URL_Builder <- function(year = 2022, numvars = "AGEP", catvars = "SEX",
+                            geo_level = "state", geo_subset = "08") {
+  if ( year < 2010 | year > 2022 | year %% 1 != 0){
+    stop("Please enter a valid year between 2010 and 2022.")
+  }
+
+  # add numeric and categorical variable user options
+  var_options <- c("AGEP","GASP","GRPIP","JWAP","JWDP","JWMNP","SEX","FER","HHL",
+                   "HISPEED","JWTRNS","SCH","SCHL")
+
+  # check numeric user options are valid
+  if (!all(numvars %in% var_options))
+    stop("Please enter a valid numeric variable.")
+  if (length(numvars) < 1)
+    stop("Include at least one numeric variable besides PWGTP.")
+  if (!all(catvars %in% var_options))
+    stop("Please enter a valid categorical variable.")
+
+  numvars_comb <- paste(numvars, collapse = ",")
+  catvars_comb <- paste(catvars, collapse = ",")
+
+  # allowable geography options
+  region_code_options   <- c("1","2","3","4","*")
+  division_code_options <- c("1","2","3","4","5","6","7","8","9","*")
+  state_code_options    <- c("01","49","21","26","29","32","34","08","51","39",
+                             "02","46","04","06","55","15","22","30","47","48",
+                             "09","50","53","17","20","35","36","10","11","12",
+                             "56","16","25","27","42","45","13","23","24","28",
+                             "37","41","05","19","31","33","44","54","18","38",
+                             "40","*")
+
+  geo_level_options <- c("all", "region", "division", "state")
+  if (!all(geo_level %in% geo_level_options))
+    stop("Please enter a valid Geography.")
+
+  if (missing(geo_subset) | length(geo_subset) == 0 | geo_subset == "") {
+    if (geo_level == "state") geo_subset <- "08"
+    if (geo_level == "region") geo_subset <- "*"
+    if (geo_level == "division") geo_subset <- "*"
+  }
+
+  if (geo_level == "region"  & !geo_subset %in% region_code_options)
+    stop("Not a valid Region code. Region code must be 1–4")
+  if (geo_level == "division" & !geo_subset %in% division_code_options)
+    stop("Not a valid Division code. Division code must be 1–9")
+  if (geo_level == "state"   & !geo_subset %in% state_code_options)
+    stop("Not a valid State code")
+
+  # Build URL
+  API_URL <- paste0(
+    "https://api.census.gov/data/", year, "/acs/acs1/pums?get=PWGTP,",
+    numvars_comb, ",", catvars_comb,
+    "&for=", geo_level, ":", geo_subset
+  )
+
+  return(API_URL)
+}
+
+# -------------------------------
+# multi-year function
+
+# two lines below for time parsing - time vars categorized as categorical in order to map the codes over from the json
+
+numvars <- c("AGEP","GASP","GRPIP","JWMNP")
+catvars <- c("FER","HHL","HISPEED","JWTRNS","SCH","SCHL","SEX","JWAP","JWDP")
+
+
+MultiYear_API_Builder <- function(years, 
+                                  numvars = "AGEP", 
+                                  catvars = "SEX",
+                                  geo_level = "state", 
+                                  geo_subset) {
+
+  # helper: parse GET -> tibble with header row as names
+  create_tibble_helper <- function(id_info) {
+    parsed <- fromJSON(rawToChar(id_info$content))
+    as_tibble(parsed[-1, ], .name_repair = ~ parsed[1, ])
+  }
+
+  result_list <- vector("list", length(years))
+
+  for (i in seq_along(years)) {
+    y <- years[i]
+
+    # build URL and pull data
+    url <- API_URL_Builder(y, numvars, catvars, geo_level, geo_subset)
+    api_response <- httr::GET(url)
+    httr::stop_for_status(api_response)
+
+    df <- create_tibble_helper(api_response)
+    df$year <- y
+
+    # get metadata for year
+    metadata <- get_pums_metadata(y)
+
+    # add labels to user specified categorical variables
+    df <- label_categoricals(df, metadata, catvars)
+
+    result_list[[i]] <- df
+  }
+
+  final <- dplyr::bind_rows(result_list)
+  class(final) <- c("census", class(final)) #make the tibble census-class
+  
+  #wrangle data
+  
+  # numerical data
+  for (i in seq_along(final)) {
+    if (colnames(final)[i] == "PWGTP") {
+    final$PWGTP <- as.integer(final$PWGTP)
+    }
+    if (colnames(final)[i] == "AGEP") {
+      final$AGEP <- as.integer(final$AGEP)
+    }
+    if (colnames(final)[i] == "GASP") {
+      final$GASP <- as.integer(final$GASP)
+    }
+    if (colnames(final)[i] == "GRPIP") {
+      final$GRPIP <- as.integer(final$GRPIP)
+    }
+    if (colnames(final)[i] == "JWMNP") { #this one is number of minutes
+      final$JWMNP <- as.integer(final$JWMNP)
+    }
+  }
+  
+  # categorical data:
+  for (i in seq_along(final)) {
+    if (colnames(final)[i] == "FER") {
+    final$FER <- as.factor(final$FER)
+    }
+    if (colnames(final)[i] == "HHL") {
+      final$HHL <- as.factor(final$HHL)
+    }
+    if (colnames(final)[i] == "HISPEED") {
+      final$HISPEED <- as.factor(final$HISPEED)
+    }
+    if (colnames(final)[i] == "JWTRNS") {
+      final$JWTRNS <- as.factor(final$JWTRNS)
+    }
+    if (colnames(final)[i] == "SCH") {
+      final$SCH <- as.factor(final$SCH)
+    }
+    if (colnames(final)[i] == "SCHL") {
+      final$SCHL <- as.factor(final$SCHL)
+    }
+    if (colnames(final)[i] == "SEX") {
+      final$SEX <- as.factor(final$SEX)
+    }
+  }
+  
+#________________________________________________
+  final <- final |>
+  mutate(
+    #JWAP
+    # start/end strings before and after 'to'
+    JWAPstart_str = sub("\\s+to.*$", "", JWAP_label),
+    JWAPend_str   = sub(".*to\\s+",   "", JWAP_label),
+    # turn a.m./p.m. into AM/PM 
+    JWAPstart_str = str_replace_all(JWAPstart_str, c("a\\.m\\." = "AM", "p\\.m\\." = "PM")),
+    JWAPend_str   = str_replace_all(JWAPend_str,   c("a\\.m\\." = "AM", "p\\.m\\." = "PM")),
+    # parse to times
+    JWAPstart_time = parse_date_time(JWAPstart_str, orders = "I:M p", quiet = TRUE),
+    JWAPend_time   = parse_date_time(JWAPend_str,   orders = "I:M p", quiet = TRUE),
+    # midpoint = start + half the interval
+    JWAP_midtime   = JWAPstart_time + (JWAPend_time - JWAPstart_time)/2,
+    # formatting
+    JWAP_mid_label  = if_else(is.na(JWAP_midtime), NA_character_,
+                             format(JWAP_midtime, "%I:%M %p")), 
+
+    #JWDP
+    # start/end strings before and after 'to'
+    JWDPstart_str = sub("\\s+to.*$", "", JWDP_label),
+    JWDPend_str   = sub(".*to\\s+",   "", JWDP_label),
+    # turn a.m./p.m. into AM/PM 
+    JWDPstart_str = str_replace_all(JWDPstart_str, c("a\\.m\\." = "AM", "p\\.m\\." = "PM")),
+    JWDPend_str   = str_replace_all(JWDPend_str,   c("a\\.m\\." = "AM", "p\\.m\\." = "PM")),
+    # parse to times
+    JWDPstart_time = parse_date_time(JWDPstart_str, orders = "I:M p", quiet = TRUE),
+    JWDPend_time   = parse_date_time(JWDPend_str,   orders = "I:M p", quiet = TRUE),
+    # midpoint = start + half the interval
+    JWDP_midtime   = JWDPstart_time + (JWDPend_time - JWDPstart_time)/2,
+    # formatting
+    JWDP_mid_label  = if_else(is.na(JWDP_midtime), NA_character_,
+                             format(JWDP_midtime, "%I:%M %p"))) |>
+  # delete unneeded cols    
+  select(-JWAPstart_time, -JWAPend_time,-JWAPstart_str, -JWAPend_str, -JWAP_midtime, -JWDPstart_time, -JWDPend_time,-JWDPstart_str, -JWDPend_str, -JWDP_midtime, -JWAP_label, -JWDP_label)
+  
+  
+#________________________________________________
+  
+  
+  return(final)
+}
+
+
+
+
+
+```
+
+```{r}
 # run it
 out2 <- MultiYear_API_Builder(
   years   = c(2022),
@@ -904,29 +1287,6 @@ out2 <- MultiYear_API_Builder(
 )
 #"JWAP","JWDP"
 
-#view(out2)
-
-#str(out2)
-
-timevars <- out2 |>
-  select(JWAP, JWAP_label, JWDP, JWDP_label)
-
-#stringr::str_split("9:40 p.m. to 9:44 p.m.", " to ")
-
-library(lubridate)
-
-midtimevars <- timevars |>
-  mutate(
-    # grab everything before to
-    start_str  = sub("\\s+to.*$", "", JWAP_label),
-    # turn a.m./p.m. into AM/PM bc this caused an error earlier
-    start_str  = str_replace_all(start_str, c("a.m." = "AM", "p.m." = "PM")),
-    start_time = parse_date_time(start_str, orders = "I:M p", quiet = TRUE),
-    mid_time   = start_time + minutes(2),
-    mid_hhmm  = format(mid_time, "%I:%M %p"))
-  
-view(midtimevars)
-  
-
+view(out2)
 
 ```
